--- a/less/world-series-lifespan.less
+++ b/less/world-series-lifespan.less
@@ -1,12 +1,16 @@
 body {
 	color: #666;
-	font-family: 'Roboto',"Helvetica Neue",Helvetica,sans-serif
+	font-family: 'Roboto',"Helvetica Neue",Helvetica,sans-serif;
 }
 
 h1 {
 	font-family: 'Lora','Roboto',"Helvetica Neue",Helvetica,sans-serif;
-	font-size: 4em;
+	font-size: 2.5em;
 	color:#333;
+
+	@media (min-width: 768px) {
+		font-size: 4em;
+	}
 }
 
 h3 {
@@ -44,6 +48,28 @@ h3 {
 
 #content {
 	margin-top: 0px;
+}
+
+p {
+	font-family:'Source Sans Pro',sans-serif;
+}
+
+.form-control {
+	width: auto;
+	display: inline;
+}
+
+.team_text p {
+	font-size: 24px;
+
+	@media (min-width: 768px) {
+		font-size: 24px;
+	}
+
+	.team-name {
+		font-weight: 700;
+	}
+
 }
 
 @media (min-width: 768px) {
